<RelativeLayout
	android:id="@+id/parentLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/black"
	tools:context="com.dtucar.dynamo.ControlActivity">

	<WebView
		android:id="@+id/streamWebView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="right"
		android:keepScreenOn="true">
	</WebView>


	<TextView
		android:id="@+id/statusView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/map"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="12dp"
		android:layout_marginTop="16dp"
		android:text="@string/status"
		android:textColor="@android:color/white"/>

	<fragment
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.SupportMapFragment"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:map="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="200dp"
		android:layout_height="170dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		tools:context="com.dtucar.dynamo.MapsActivity"
		tools:layout="@layout/activity_maps"/>

	<Button
		android:id="@+id/burnButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="12dp"
		android:layout_marginTop="16dp"
		android:cropToPadding="true"
		android:drawableLeft="@android:drawable/ic_media_play"
		android:padding="10dp"
		android:scaleType="center"
		android:text="@string/burn"/>

	<TextView
		android:id="@+id/speedView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="12dp"
		android:layout_marginTop="16dp"
		android:layout_toRightOf="@+id/burnButton"
		android:text="@string/km_h"
		android:textColor="@android:color/white"/>

	<ng.max.slideview.SlideView
		android:id="@+id/slideView"
		android:layout_width="195dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/burnButton"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="40dp"
		app:animateSlideText="true"
		app:buttonBackgroundColor="@android:color/white"
		app:buttonImage="@drawable/brake"
		app:reverseSlide="false"
		app:slideBackgroundColor="@color/brakeBackground"
		app:slideText="@string/brake"
		app:slideTextColor="@android:color/white"
		app:strokeColor="@color/brakeStroke"/>

	<TextView
		android:id="@+id/brakePercentage"
		android:layout_width="195dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/slideView"
		android:layout_marginLeft="5dp"
		android:gravity="right"
		android:text="@string/zero_percent"
		android:textColor="@android:color/white"/>

	<io.github.controlwear.virtual.joystick.android.JoystickView
		android:id="@+id/joystickView"
		xmlns:custom="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		custom:JV_backgroundColor="#0e009688"
		custom:JV_borderColor="#b900796b"
		custom:JV_borderWidth="2dp"
		custom:JV_buttonColor="#afff6e40"
		custom:JV_fixedCenter="false"/>

	<TextView
		android:id="@+id/steeringPercentage"
		android:layout_width="340dp"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_marginBottom="20dp"
		android:gravity="center"
		android:text="@string/zero_percent"
		android:textColor="@android:color/white"/>

	<Button
		android:id="@+id/hornButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:layout_marginRight="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/horn"/>

</RelativeLayout>